--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/giftroom
-username=root
+name=root
 password=123456
 initialSize=0
 maxActive=20
